--- a/song32.html
+++ b/song32.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🎵 Break My Heart - Dua Lipa</title>
+  <title>🎵 Locked Out of Heaven - Bruno Mars</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -42,16 +42,16 @@
   </style>
 </head>
 <body>
-  <h1>🎵 Break My Heart - Dua Lipa 🎵</h1>
+  <h1>🎵 Locked Out of Heaven - Bruno Mars 🎵</h1>
   <div class="player">
     <audio controls autoplay>
-      <source src="song31.mp3" type="audio/mpeg">
+      <source src="song32.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
   </div>
   <p class="message">
-    “Am I falling in love with the one that could break my heart?” 💔<br>
-    No matter what, you’ve got a heart of gold and I hope this year fills it with nothing but love and joy. Proud to have you as my best friend! 💕
+    “Cause you make me feel like I've been locked out of heaven.” 🌟<br>
+    With you around, every day feels like pure joy and magic. Cheers to an unforgettable year ahead, bestie! 🎉
   </p>
   <br>
   <a href="music.html" class="btn">← Back to Playlist</a>
