--- a/scrapbook.html
+++ b/scrapbook.html
@@ -63,11 +63,23 @@
 
 <script>
   const images = [
-    "images/cake1.png",
-    "images/cake2.png",
-    "images/cake3.png",
-    "images/cake4.png",
-    "images/cake5.png"
+    "images/birthday1.png",
+    "images/birthday2.png",
+    "images/birthday3.png",
+    "images/birthday4.png",
+    "images/birthday5.png"
+    "images/birthday6.png",
+    "images/birthday7.png",
+    "images/birthday8.png",
+    "images/birthday9.png",
+    "images/birthday10.png"    "images/birthday1.png",
+    "images/birthday11.png",
+    "images/birthday12.png",
+    "images/birthday13.png",
+    "images/birthday14.png"
+    "images/birthday15.png",
+    "images/birthday16.png",
+    "images/birthday17.png",
   ];
 
   let currentIndex = 0;
